--- a/banana_config.json
+++ b/banana_config.json
@@ -1,15 +1,13 @@
 {
     "name": "Flan-T5 BASE SUMMARY",
     "category": "summarization",
-    
     "example_input": {
         "prompt": "Tron is a decentralized, blockchain-based, open-source protocol supporting various ckchain technology and DApps.",
         "min_length" : 25, 
         "max_length" : 30
     },
   
-   "example_output":{
-      "base64_output":"Tron is a decentralized, blockchain-based, open-source protocol supporting various kinds of blockchain networks and smart contract systems.."
+   "example_output":{ "base64_output":"Tron is a decentralized, blockchain-based, open-source protocol.."
    },
    "version":"1"
 }
